# md-cli

./: AGENTS.md  README.md  pyproject.toml
.github/workflows/: release-github.yml  release-rust.yml
crates/dkdc-md-cli/: Cargo.toml
crates/dkdc-md-cli-py/: Cargo.toml
crates/dkdc-md-cli/src/: client.rs
tests/: test_md_cli.py
