[workspace]

[package]
name = "dkdc-md-cli-py"
version = "0.2.2"
edition = "2024"
authors = ["Cody <cody@dkdc.io>"]
license = "MIT"

[lib]
name = "core"
crate-type = ["cdylib"]

[dependencies]
dkdc-md-cli = { path = "../dkdc-md-cli" }
pyo3 = { version = "0.28", features = ["extension-module", "abi3-py311"] }
