[package]
name = "dkdc-md-cli"
version = "0.2.2"
edition = "2024"
rust-version = "1.93"
authors = ["Cody <cody@dkdc.io>"]
license = "MIT"
description = "CLI for the MotherDuck REST API"
repository = "https://github.com/dkdc-io/md-cli"
homepage = "https://github.com/dkdc-io/md-cli"
keywords = ["motherduck", "cli", "duckdb", "api"]
categories = ["command-line-utilities"]
readme = "../../README.md"

[lib]
name = "dkdc_md_cli"
path = "src/lib.rs"

[[bin]]
name = "md"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
ureq = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
percent-encoding = "2"
